# mllm-wiki-kb

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  schema.sql
docs/: app.js  content.enc  content.json  index.html  meta.json  style.css
docs/control-plane/: CODEX_REVIEW.md  PUBLICATION_BOUNDARY.md  TASK_QUEUE_MINIMAX.md
docs/quwei-zhuwei/: index.html
docs/roadmap/: ACCEPTANCE_CRITERIA.md  LEGACY_CONTENT_DECISION.md  LOCAL_KB_PROGRESS_2026-07-01.md  NEXT_STAGE_PLAN.md
docs/seat-chart/: index.html
docs/seat-lookup/: index.html
docs/templates/: minimax_work_order.md
docs/zhuwei-analysis/: index.html
index/: blacklist.csv  formulations.jsonl
index/corpus/: article_types.json  classification_priority_review.csv  classification_review.csv
index/entities/: events.jsonl  orgs.jsonl  persons.jsonl  places.jsonl
index/external_sources/: google_drive_folders.jsonl  google_drive_inventory.jsonl
index/manifests/: scan_20260608_183929.json
index/pro_sources/: intake_tasks.jsonl  query_seeds.jsonl  source_map.jsonl  source_types.json  url_candidates.jsonl
obsidian/: sync_log.md  vault_manifest.json
roadmap/: 民主党派工作综合调研框架.md  语料源清单.md
scripts/: ci.sh  compare_vector_recall.py
src/kb/: __init__.py  cli.py  embeddings.py  indexing.py  ingest.py  sources.py  staff_check.py  store.py
templates/: person.md  topic.md
tests/: test_core_workflows.py  test_corpus.py  test_staff.py
webapp/: app.py  build_static.py  crawl_govcn.py  crawl_mmzy.py  k8s.yaml  mengxun_batch.py  requirements.txt
wiki/: index.md  log.md
(+176 files in other folders)
