[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mllm-wiki-kb"
version = "0.1.0"
description = "Local MLLM wiki knowledge base for Minmeng/United Front WeChat articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kb = "kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

