[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mllm-wiki-kb"
version = "0.1.0"
description = "Local MLLM wiki knowledge base for Minmeng/United Front WeChat articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42",
    "Flask>=3",
    "Markdown>=3",
    "PyYAML>=6",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7",
]

[project.scripts]
kb = "kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
